--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <fieldset class="list">
             <br><br/>
-            <h3>Your pending taks, you can only delete task from below.</h3>
+            <h3>Your pending taks, you can delete the task by clicking completed</h3>
             <div id="tasks"></div>
         </fieldset>
 
