--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <fieldset class="input">
             <h3>Input Task</h3>
-            <input type="text" id="key" placeholder="Sr. no">
+            <input type="text" id="key" placeholder="enter a title">
             <input type="text" id="value" placeholder="enter your tasks">
             <button type="submit" id="submit">Insert</button>
             <p class="edit-text">To edit the tasks enter the task number and new text.</p>
