--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="text" id="key" placeholder="enter a title">
             <input type="text" id="value" placeholder="enter your tasks">
             <button type="submit" id="submit">Insert</button>
-            <p class="edit-text">To edit the tasks enter the task number and new text.</p>
+            <p class="edit-text">To edit the tasks enter the task title and new text.</p>
         </fieldset>
 
         <fieldset class="list">
